@@ -35,6 +35,17 @@
 <div class="document">
 
 
+<p>2018-06-09  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>magick/blob.c (ReadBlobLSBDoubles, ReadBlobMSBDoubles): Only
+byte-swap doubles or test doubles for NAN if we have read enough
+bytes for at least one double value.
+(ReadBlob): Add an assertion to enforce that ReadBlob() will never
+report reading more bytes than requested due to some
+implementation issue.</li>
+</ul>
+</blockquote>
 <p>2018-06-08  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
